--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 							Student</p>
 							<ul class="icons">
 								<li><a href="https://twitter.com/GHumphreysUK" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://github.com/GeorgeHumphreysUK" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/george-humphreysuk/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/GeorgeSHumphreys" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/georgeshumphreys/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">About</a>
@@ -108,8 +108,8 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="https://twitter.com/GHumphreysUK" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://github.com/GeorgeHumphreysUK" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/george-humphreysuk/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/GeorgeSHumphreys" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/georgeshumphreys/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; GHumphreysUK</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
