--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<section id="six" class="wrapper style6 special">
 					<div class="inner">
 						<header class="major">
-							<h2>Github Repo Examples</h2>
+							<h2>Github Repository Examples</h2>
 						</header>
 						<ul class="actions stacked">
 							<li><a href="https://github.com/GeorgeHumphreysUK" class="button fit primary">Github</a></li>
@@ -82,7 +82,6 @@
 				
 
 				<!-- Two -->
-				<!--
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
@@ -90,6 +89,7 @@
 								<p>Repo Description.</p>
 							</div>
 						</section>
+						<!--
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Repo Example 2</h2>
