--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
 						</section>
 					</section>
 				-->
+						
+				<!--Twitter Section-->
+				<section id="six" class="wrapper style6 special">
+					<div class="inner">
+						<a class="twitter-timeline " data-width = 500 data-height = 500 href="https://twitter.com/GHumphreysUK?ref_src=twsrc%5Etfw">Tweets by GHumphreysUK</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+						</ul>
+					</div>
+				</section>
+						
 				<!-- Footer -->
 					<footer id="footer">
 						<a class="twitter-timeline " data-width = 500 data-height = 500 href="https://twitter.com/GHumphreysUK?ref_src=twsrc%5Etfw">Tweets by GHumphreysUK</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
