--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 											<li><a href="#banner" class="more scrolly">Home</a></li>
 											<li><a href="#one" class="more scrolly">About</a></li>
 											<li><a href="#two" class="more scrolly">Github Repos</a></li>
+											<li><a href="#three" class="more scrolly">Twitter</a></li>
 										</ul>
 									</div>
 								</li>
@@ -106,8 +107,11 @@
 				-->
 						
 				<!--Twitter Section-->
-				<section id="six" class="wrapper style6 special">
+				<section id="three" class="wrapper style6 special">
 					<div class="inner">
+						<header class="major">
+							<h2>Twitter</h2>
+						</header>
 						<a class="twitter-timeline " data-width = 500 data-height = 500 href="https://twitter.com/GHumphreysUK?ref_src=twsrc%5Etfw">Tweets by GHumphreysUK</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 						</ul>
 					</div>
