--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 								<p>Repo Description.</p>
 							</div>
 						</section>
+					</section>
 						<!--
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
