--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Repo Example 1</h2>
-								<p>Repo Description.</p>
+							<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
+								<h2>YA3WWOG</h2>
+								<p>Recently I took part in a UKIE Games Jam, and with a team of people from my university, we developed this 3D Puzzler in 30 hours. Try it out! #raisethegamejam</p>
+								<a href = "https://hacchacc.itch.io/ya3wwog-yet-another-3-wizards-with-orbs-game-bethesdnt">Itch.Io page link</a>
 							</div>
 						</section>
 					</section>
