--- a/index.html
+++ b/index.html
@@ -87,18 +87,19 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
 								<h2>YA3WWOG</h2>
-								<p>Recently I took part in a UKIE Games Jam, and with a team of people from my university, we developed this 3D Puzzler in 30 hours. Try it out! #raisethegamejam</p>
+								<p>I took part in a UKIE Games Jam, and with a team of people from my university, we developed this 3D Puzzler in 30 hours. Try it out! #raisethegamejam</p>
 								<a href = "https://hacchacc.itch.io/ya3wwog-yet-another-3-wizards-with-orbs-game-bethesdnt">Itch.Io page link</a>
 							</div>
 						</section>
 					</section>
-						<!--
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Repo Example 2</h2>
-								<p>Repo Description.</p>
+							<div class="image"><img src="images/pic02.png" alt="" /></div><div class="content">
+								<h2>Memory Lock</h2>
+								<p>After the UKIE Games Jam, we decided to try and expand on the 3D Puzzler style and add some more features during the Global Game Jam 2020. This became Memory Lock!</p>
+								<a href = "https://globalgamejam.org/2021/games/memory-lock-7">GGJ page link</a>
 							</div>
 						</section>
+						<!--
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Repo Example 3</h2>
