--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 											<li><a href="#one" class="more scrolly">About</a></li>
 											<li><a href="#two" class="more scrolly">Github Repos</a></li>
 											<li><a href="#three" class="more scrolly">Twitter</a></li>
+											<li><a href="https://georgeshumphreys.github.io/S2D-Pacman-Recreation/">S2D Pacman Recreation</a></li>
 										</ul>
 									</div>
 								</li>
