--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
 								<a href = "https://globalgamejam.org/2021/games/memory-lock-7">GGJ page link</a>
 							</div>
 						</section>
-						<!--
+					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Repo Example 3</h2>
-								<p>Repo Description.</p>
+							<div class="image left"><img src="images/Pacman Thumbnail.png" alt="" /></div><div class="content">
+								<h2>S2D Pacman Recreation</h2>
+								<p>For a university assignment, I was tasked to recreate Pacman using a University framework based on the SDL library. I also made a write up overviewing the project and outlining challenges.</p>
 							</div>
 						</section>
 					</section>
-				-->
+	
 						
 				<!--Twitter Section-->
 				<section id="three" class="wrapper style4 special">
