--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 							<div class="image left"><img src="images/Pacman Thumbnail.png" alt="" /></div><div class="content">
 								<h2>S2D Pacman Recreation</h2>
 								<p>For a university assignment, I was tasked to recreate Pacman using a University framework based on the SDL library. I also made a write up overviewing the project and outlining challenges.</p>
+								<a href = "https://georgeshumphreys.github.io/S2D-Pacman-Recreation/">Write-up Link</a>
 							</div>
 						</section>
 					</section>
