--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						</section>
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image left"><img src="images/Pacman Thumbnail.png" alt="" /></div><div class="content">
+							<div class="image left"><img src="images/PacmanThumbnail.png" alt="" /></div><div class="content">
 								<h2>S2D Pacman Recreation</h2>
 								<p>For a university assignment, I was tasked to recreate Pacman using a University framework based on the SDL library. I also made a write up overviewing the project and outlining challenges.</p>
 								<a href = "https://georgeshumphreys.github.io/S2D-Pacman-Recreation/">Write-up Link</a>
