Updated with 3 Projects

--- a/index.html
+++ b/index.html
@@ -109,6 +109,32 @@
 							</div>
 						</section>
 					</section>
+					<section class="spotlight">
+						<div class="image"><img src="images/PortalOpengl.PNG" alt="" /></div><div class="content">
+							<h2>OpenGL Portal Demo</h2>
+							<p>Whilst learning the OpenGL framework, I decided to look through shaders and the OpenGL Pipeline. Using the knowledge I had learnt, I decided to write a Portal Shader using OpenGL.</p>
+							<a href = "https://github.com/GeorgeSHumphreys/OpenGL-Portal-Demo">Github Link</a>
+						</div>
+					</section>
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image left"><img src="images/BlastTracks.PNG" alt="" /></div><div class="content">
+								<h2>BlastTracks - A VR Rhythm Game</h2>
+								<p>During the past year I bought myself a VR headset and experienced VR for the first time. As soon as I used it I knew I wanted to try and make a VR Rhythm game. </p>
+								<p>With the help of a friend who made the models and design, I programmed a VR rhythm shooter which takes inspirations from BeatSaber. Watch the trailer below to see how it turned out!</p>
+								<a href = "https://twitter.com/GHumphreysUK/status/1388952438015762438">Link to the Trailer</a>
+							</div>
+						</section>
+					</section>
+					<section class="spotlight">
+						<div class="image"><img src="images/BombDrop.PNG" alt="" /></div><div class="content">
+							<h2>BombDrop - Basic OpenGL PVP Game</h2>
+							<p>As a part of my studies, I was required to make a basic game using a basic OpenGL framework. From what started as a recreation of a classic show called Bamzooki called StaffZooki, the game turned into a 1v1 Tank based game, where the goal is to stay alive on the platform!</p>
+							<p>The game includes Collision, Lighting, A Heads-Up-Display, Basic Physics and 3d Models!</p>
+							<a href = "https://github.com/GeorgeSHumphreys/StaffZooki">Github Link</a>
+						</div>
+					</section>
+					
 	
 						
 				<!--Twitter Section-->
