--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
 							<p>The game includes Collision, Lighting, A Heads-Up-Display, Basic Physics and 3d Models!</p>
 						</div>
 					</section>
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image left"><img src="images/SlimeImage.png" alt="" /></div><div class="content">
+								<h2>Multiplayer Mobile Party Game</h2>
+								<p>Over the summer I was given the task of creating a project that would allow for a croud of people to connect via a website and play in small challenges as an icebreaker for group settings.  </p>
+								<p>By using an external server and linking that up to both a website, and a host game made in Unity, I was able to develop a game hosted on a TV or projector, which could allow for 48 concurrent user connections!</p>
+							</div>
+						</section>
+					</section>
 
 					
 	
