--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<h2>Github Repository Examples</h2>
 						</header>
 						<ul class="actions stacked">
-							<li><a href="https://github.com/GeorgeHumphreysUK" class="button fit primary">Github</a></li>
+							<li><a href="https://github.com/GeorgeSHumphreys" class="button fit primary">Github</a></li>
 						</ul>
 					</div>
 				</section>
