--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 						</section>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/PortalOpengl.PNG" alt="" /></div><div class="content">
+						<div class="image"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/PortalDemo.mp4"></video></div><div class="content">
 							<h2>OpenGL Portal Demo</h2>
 							<p>Whilst learning the OpenGL framework, I decided to look through shaders and the OpenGL Pipeline. Using the knowledge I had learnt, I decided to write a Portal Shader using OpenGL.</p>
 						</div>
 					</section>
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image left"><img src="images/BlastTracks.PNG" alt="" /></div><div class="content">
+							<div class="image left"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/BlastTracksTrailer.mp4"></video></div><div class="content">
 								<h2>BlastTracks - A VR Rhythm Game</h2>
 								<p>During the past year I bought myself a VR headset and experienced VR for the first time. As soon as I used it I knew I wanted to try and make a VR Rhythm game. </p>
 								<p>With the help of a friend who made the models and design, I programmed a VR rhythm shooter which takes inspirations from BeatSaber. Watch the trailer below to see how it turned out!</p>
