Added remaining videos

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						</section>
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image left"><img src="images/PacmanThumbnail.png" alt="" /></div><div class="content">
+							<div class="video left"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/Pacman Gameplay.mp4"></div><div class="content">
 								<h2>S2D Pacman Recreation</h2>
 								<p>For a university assignment, I was tasked to recreate Pacman using a University framework based on the SDL library. I also made a write up overviewing the project and outlining challenges.</p>
 								<a href = "https://georgeshumphreys.github.io/S2D-Pacman-Recreation/">Write-up Link</a>
@@ -117,7 +117,7 @@
 					</section>
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image left"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/BlastTracksTrailer.mp4"></video></div><div class="content">
+							<div class="video left"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/BlastTracksTrailer.mp4"></video></div><div class="content">
 								<h2>BlastTracks - A VR Rhythm Game</h2>
 								<p>During the past year I bought myself a VR headset and experienced VR for the first time. As soon as I used it I knew I wanted to try and make a VR Rhythm game. </p>
 								<p>With the help of a friend who made the models and design, I programmed a VR rhythm shooter which takes inspirations from BeatSaber. Watch the trailer below to see how it turned out!</p>
@@ -126,7 +126,7 @@
 						</section>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/BombDrop.PNG" alt="" /></div><div class="content">
+						<div class="video"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/BombDrop gameplay.mp4"></video></div><div class="content">
 							<h2>BombDrop - Basic OpenGL PVP Game</h2>
 							<p>As a part of my studies, I was required to make a basic game using a basic OpenGL framework. From what started as a recreation of a classic show called Bamzooki called StaffZooki, the game turned into a 1v1 Tank based game, where the goal is to stay alive on the platform!</p>
 							<p>The game includes Collision, Lighting, A Heads-Up-Display, Basic Physics and 3d Models!</p>
