--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
 				
 
 				<!-- Two -->
-				<section>
+				<section class="wrapper">
 					<section class="spotlight filterDiv gamej">
-						<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
+						<div class="image"><img src="images/pic01.png" alt="" /></div>
+						<div class="content">
 							<h2>YA3WWOG</h2>
 							<p>I took part in a UKIE Games Jam, and with a team of people from my university, we developed this 3D Puzzler in 30 hours. Try it out! #raisethegamejam</p>
 							<a href = "https://hacchacc.itch.io/ya3wwog-yet-another-3-wizards-with-orbs-game-bethesdnt">Itch.Io page link</a>
 						</div>
+
 					</section>
 
 					<section class="spotlight filterDiv gamej">
@@ -107,7 +109,7 @@
 					</section>
 
 					<section class="spotlight filterDiv uni gapi">
-						<div class="video"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/Pacman Gameplay.mp4"></div><div class="content">
+						<div class="video"><video playsinline autoplay muted loop><source src = "videos/Pacman Gameplay.mp4"></div><div class="content">
 							<h2>S2D Pacman Recreation</h2>
 							<p>For a university assignment, I was tasked to recreate Pacman using a University framework based on the SDL library. I also made a write up overviewing the project and outlining challenges.</p>
 							<a href = "https://georgeshumphreys.github.io/S2D-Pacman-Recreation/">Write-up Link</a>
@@ -115,7 +117,7 @@
 					</section>
 
 					<section class="spotlight filterDiv gapi">
-						<div class="image"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/PortalDemo.mp4"></video></div><div class="content">
+						<div class="video"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/PortalDemo.mp4"></video></div><div class="content">
 							<h2>OpenGL Portal Demo</h2>
 							<p>Whilst learning the OpenGL framework, I decided to look through shaders and the OpenGL Pipeline. Using the knowledge I had learnt, I decided to write a Portal Shader using OpenGL.</p>
 						</div>
