Fix to button display on mobile devices

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 						<header class="major">
 							<h2>Project Filters</h2>
 						</header>
-						<ul class="actions" id="buttonFilterContainer">
-							<li><a class="button fit filterMode all primary" >All Projects</a></li>
-							<li><a class="button fit filterMode uni">University Projects</a></li>
-							<li><a class="button fit filterMode gamej">Game Jams</a></li>
-							<li><a class="button fit filterMode personal">Personal Games</a></li>
-							<li><a class="button fit filterMode gapi">Graphics API's</a></li>
-						</ul>
+						<div class="actions" id="buttonFilterContainer">
+							<a class="button fit filterMode all primary" >All Projects</a>
+							<a class="button fit filterMode uni">University Projects</a>
+							<a class="button fit filterMode gamej">Game Jams</a>
+							<a class="button fit filterMode personal">Personal Games</a>
+							<a class="button fit filterMode gapi">Graphics API's</a>
+						</div>
 					</div>
 				</section>
 				
