Added media selection for mobile

--- a/index.html
+++ b/index.html
@@ -77,19 +77,21 @@
 						<header class="major">
 							<h2>Project Filters</h2>
 						</header>
-						<ul class="actions" id="buttonFilterContainer">
+						<div class="fit">
+						<ul class="wrapper fit left actions" id="buttonFilterContainer">
 							<li><a class="button fit filterMode all primary" >All Projects</a></li>
 							<li><a class="button fit filterMode uni">University Projects</a></li>
 							<li><a class="button fit filterMode gamej">Game Jams</a></li>
 							<li><a class="button fit filterMode personal">Personal Games</a></li>
 							<li><a class="button fit filterMode gapi">Graphics API's</a></li>
 						</ul>
+						</div>
 					</div>
 				</section>
 				
 
 				<!-- Two -->
-				<section class="wrapper">
+				<section id = "two" class="wrapper">
 					<section class="spotlight filterDiv gamej">
 						<div class="image"><img src="images/pic01.png" alt="" /></div>
 						<div class="content">
