Add Github Button back

--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
 				<section id="six" class="wrapper style6 special">
 					<div class="inner">
 						<header class="major">
+							<h2>Github Repository Examples</h2>
+						</header>
+						<ul class="actions stacked">
+							<li><a href="https://github.com/GeorgeSHumphreys" class="button fit primary">Github</a></li>
+						</ul>
+					</div>
+				</section>
+
+				<!-- six -->
+				<section id="six" class="wrapper style6 special">
+					<div class="inner">
+						<header class="major">
 							<h2>Project Filters</h2>
 						</header>
 						<div class="actions" id="buttonFilterContainer">
