Added mario project to website

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
 							<p>By using an external server and linking that up to both a website, and a host game made in Unity, I was able to develop a game hosted on a TV or projector, which could allow for 48 concurrent user connections!</p>
 						</div>
 					</section>
+
+					<section class="spotlight filterDiv uni gapi">
+						<div class="image"><img src="images/MarioProject.png" alt="" /></div><div class="content">
+							<h2>SDL Mario Recreation</h2>
+							<p>During my second semester of my university course, I was tasked to recreate the original mario bros arcade using the SDL library in C++.  </p>
+							<p>The result was a playable version, allowing for multiple levels, highscore saving, and a different selection of enemies the players can face.</p>
+						</div>
+					</section>
 				</section>
 
 					
