--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</section>
 
 					<section class="spotlight filterDiv uni gapi">
-						<div class="image"><img src="images/MarioProject.png" alt="" /></div><div class="content">
+						<div class="image"><img src="images/MarioProject.PNG" alt="" /></div><div class="content">
 							<h2>SDL Mario Recreation</h2>
 							<p>During my second semester of my university course, I was tasked to recreate the original mario bros arcade using the SDL library in C++.  </p>
 							<p>The result was a playable version, allowing for multiple levels, highscore saving, and a different selection of enemies the players can face.</p>
