Added Year 2 project demo videos

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<a class="button fit filterMode uni">University Projects</a>
 							<a class="button fit filterMode gamej">Game Jams</a>
 							<a class="button fit filterMode personal">Personal Games</a>
-							<a class="button fit filterMode gapi">Graphics API's</a>
+							<a class="button fit filterMode gapi">Graphic Frameworks</a>
 						</div>
 					</div>
 				</section>
@@ -134,14 +134,30 @@
 						</div>
 					</section>
 
+					<section class="spotlight filterDiv gapi">
+						<div class="video"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/DX11-Physics-Demo.mp4"></video></div><div class="content">
+							<h2>DX11 Physics Engine</h2>
+							<p>During my second year of university I was challenged to make a 3d Physics Engine from scratch using DX11. This system included Particle Systems, Particle Models and Rigidbodies which can be attached to objects. It also had AABB, Sphere and OBB collisions, with an appropriate collision response!</p>
+							<p>This was my most enjoyable University module so far!</p>
+						</div>
+					</section>
+
+					<section class="spotlight filterDiv gapi">
+						<div class="video"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/DX11-Shader-demo.mp4"></video></div><div class="content">
+							<h2>DX11 Procedural Terrain</h2>
+							<p>Another module I was tasked during my second year of university was to learn the graphical API of DirectX11. For this I added different lighting types, a Skybox, scrolling cloud textures, and implemented height and normal maps to generate water and terrain. I then matched the terrain with a chunk loading system to create a large amount of procedurally generated terrain!</p>
+						</div>
+					</section>
+
 					<section class="spotlight filterDiv personal">
 						<div class="video"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/BlastTracksTrailer.mp4"></video></div><div class="content">
 							<h2>BlastTracks - A VR Rhythm Game</h2>
 							<p>During the past year I bought myself a VR headset and experienced VR for the first time. As soon as I used it I knew I wanted to try and make a VR Rhythm game. </p>
-							<p>With the help of a friend who made the models and design, I programmed a VR rhythm shooter which takes inspirations from BeatSaber. Watch the trailer below to see how it turned out!</p>
+							<p>With the help of a friend who made the models and designed the environment, I programmed a VR rhythm shooter which takes inspirations from BeatSaber. Watch the trailer below to see how it turned out!</p>
 							<a href = "https://twitter.com/GHumphreysUK/status/1388952438015762438">Link to the Trailer</a>
 						</div>
 					</section>
+					
 
 
 					<section class="spotlight filterDiv uni gapi">
