--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 							<a class="button fit filterMode gamej">Game Jams</a>
 							<a class="button fit filterMode personal">Personal Games</a>
 							<a class="button fit filterMode gapi">Graphic Frameworks</a>
+							<a class="button fit filterMode tools">Tools</a>
 						</div>
 					</div>
 				</section>
@@ -181,6 +182,15 @@
 							<h2>SDL Mario Recreation</h2>
 							<p>During my second semester of my university course, I was tasked to recreate the original mario bros arcade using the SDL library in C++.  </p>
 							<p>The result was a playable version, allowing for multiple levels, highscore saving, and a different selection of enemies the players can face.</p>
+						</div>
+					</section>
+
+					<section class="spotlight filterDiv uni tools">
+						<div class="image"><img src="images/EasyXInput.PNG" alt="" /></div><div class="content">
+							<h2>EasyXInput: The simple XInput Wrapper for C++</h2>
+							<p>I decided to delve into the region of XInput and wanted to make a simple library that I can use in my engines.</p>
+							<p>With the knowledge learnt through testing, I have decided to release this library for public use with the goal of easily implementing Controller inputs.</p>
+							<a href = "https://github.com/GeorgeSHumphreys/EasyXInput">Link to the Repository</a>
 						</div>
 					</section>
 				</section>
