--- a/index.html
+++ b/index.html
@@ -185,12 +185,20 @@
 						</div>
 					</section>
 
-					<section class="spotlight filterDiv uni tools">
+					<section class="spotlight filterDiv tools">
 						<div class="image"><img src="images/EasyXInput.PNG" alt="" /></div><div class="content">
 							<h2>EasyXInput: The simple XInput Wrapper for C++</h2>
 							<p>I decided to delve into the region of XInput and wanted to make a simple library that I can use in my engines.</p>
 							<p>With the knowledge learnt through testing, I have decided to release this library for public use with the goal of easily implementing Controller inputs.</p>
 							<a href = "https://github.com/GeorgeSHumphreys/EasyXInput">Link to the Repository</a>
+						</div>
+					</section>
+
+					<section class="spotlight filterDiv personal">
+						<div class="video"><video playsinline autoplay muted loop width="760" height="405"><source src = "videos/BPTDemo.mp4"></video></div><div class="content">
+							<h2>Bible Presentation Tool</h2>
+							<p>The idea for this project was to provide an alternative for presentation tools like ProPresenter and Powerpoint. Whilst the project at this point the example project only shows images, it provides the strong potential for developers to create visual 3D templates, allowing anybody to run the program, insert their presentation files in a folder, and adapt the template to the purpose they are wanting to use it for. This aims to create some interesting visuals and interaction with younger people who may struggle with focussing. </p>
+							<a href = "https://github.com/GeorgeSHumphreys/BiblePresentationTool">Link to the Repository</a>
 						</div>
 					</section>
 				</section>
